--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
     <style>
         body { font-family: Arial, sans-serif; background: #fff; text-align: center; }
         h1 { font-size: 24px; }
-        .clock { position: absolute; top: 10px; left: 10px; font-size: 16px; }
-        .counter { position: absolute; top: 10px; right: 10px; font-size: 16px; }
+        .clock, .counter { position: absolute; top: 10px; font-size: 16px; }
+        .clock { left: 10px; }
+        .counter { right: 10px; }
         .nav { margin: 20px 0; }
         .nav button { padding: 5px 10px; margin: 5px; border: 1px solid #ddd; background: #f8f8f8; cursor: pointer; }
-        .sub-nav { display: none; margin: 10px; }
+        .sub-nav { display: none; margin-top: 5px; }
         .post { border-bottom: 1px solid #ddd; padding: 10px; margin: 10px auto; width: 80%; max-width: 600px; text-align: left; }
         .post h2 { font-size: 18px; }
         .post p { white-space: pre-line; }
+        .hidden { display: none; }
+        .footer { margin-top: 30px; font-size: 14px; color: #666; }
+        .upload-container { margin: 20px; }
     </style>
 </head>
 <body>
@@ -22,19 +26,27 @@
     <div class="counter">访问量：<span id="viewCount">加载中...</span></div>
     <h1>小狗创作中</h1>
 
-    <!-- **主分类导航栏（五个大类别）** -->
-    <div class="nav" id="mainNav"></div>
-    <!-- **子分类导航栏（小标签，默认隐藏）** -->
-    <div class="nav sub-nav" id="subNav"></div>
+    <!-- **导航栏（分类 & 过滤）** -->
+    <div class="nav" id="nav"></div>
 
     <h2>最新作品</h2>
     <div id="content">加载中...</div>
 
+    <!-- **图片上传功能** -->
+    <div class="upload-container">
+        <input type="file" id="imageUpload" accept="image/*">
+        <button onclick="addWatermark()">上传并添加水印</button>
+        <canvas id="canvas" style="display:none;"></canvas>
+        <div id="imagePreview"></div>
+    </div>
+
+    <!-- **网站底部邮箱** -->
+    <div class="footer">联系邮箱：<a href="mailto:oloiyy@163.com">oloiyy@163.com</a></div>
+
     <script>
         // **时钟**
         function updateClock() {
-            const now = new Date();
-            document.getElementById('clock').textContent = now.toLocaleTimeString();
+            document.getElementById('clock').textContent = new Date().toLocaleTimeString();
         }
         setInterval(updateClock, 1000);
         updateClock();
@@ -44,56 +56,61 @@
         localStorage.viewCount = parseInt(localStorage.viewCount) + 1;
         document.getElementById('viewCount').textContent = localStorage.viewCount;
 
-        // **五个主分类**
-        const mainCategories = ["小说-同人", "小说-原创", "画画-同人", "画画-原创", "画画-课程跟画"];
+        // **分类数据**
+        const categories = {
+            "小说-同人": ["成小玉"],
+            "小说-原创": ["原创故事1", "原创故事2"],
+            "画画-同人": ["角色A", "角色B"],
+            "画画-原创": ["原创插画1", "原创插画2"],
+            "画画-课程跟画": []
+        };
 
-        let categoryMap = {}; // 记录主分类和对应的小分类
-        let postList = [];
+        // **生成导航栏**
+        const navDiv = document.getElementById("nav");
+        Object.keys(categories).forEach(category => {
+            const btn = document.createElement("button");
+            btn.textContent = category;
+            btn.onclick = () => toggleSubNav(category);
+            navDiv.appendChild(btn);
 
-        // **获取 GitHub Issues**
+            const subNav = document.createElement("div");
+            subNav.classList.add("sub-nav");
+            subNav.id = `sub-${category}`;
+            categories[category].forEach(sub => {
+                const subBtn = document.createElement("button");
+                subBtn.textContent = sub;
+                subBtn.onclick = () => filterPosts(sub);
+                subNav.appendChild(subBtn);
+            });
+            navDiv.appendChild(subNav);
+        });
+
+        // **展开/折叠小分类**
+        function toggleSubNav(category) {
+            document.querySelectorAll(".sub-nav").forEach(el => el.style.display = "none");
+            const subNav = document.getElementById(`sub-${category}`);
+            if (subNav) subNav.style.display = "block";
+        }
+
+        // **加载 GitHub Issues**
         async function fetchIssues() {
-            const username = "joinliving";  // GitHub 用户名
-            const repo = "puppy";  // 仓库名
+            const username = "joinliving";
+            const repo = "puppy";
             const url = `https://api.github.com/repos/${username}/${repo}/issues?state=open`;
 
             try {
                 const response = await fetch(url);
                 const issues = await response.json();
                 const contentDiv = document.getElementById("content");
-                const mainNav = document.getElementById("mainNav");
                 contentDiv.innerHTML = "";
-                mainNav.innerHTML = "";
 
-                // **初始化主分类**
-                mainCategories.forEach(cat => categoryMap[cat] = new Set());
-
-                // **解析 Issue 并分类**
                 issues.forEach(issue => {
-                    let tags = issue.body.match(/#\S+/g) || [];
-                    tags = tags.map(tag => tag.replace("#", "")); // 去掉 `#`
+                    const post = document.createElement("div");
+                    post.classList.add("post");
+                    post.dataset.tags = issue.labels.map(label => label.name).join(",");
 
-                    let mainTag = tags.find(tag => mainCategories.includes(tag)); // 找到主分类
-                    let subTags = tags.filter(tag => !mainCategories.includes(tag)); // 剩下的是小标签
-
-                    if (mainTag) {
-                        subTags.forEach(sub => categoryMap[mainTag].add(sub)); // 存入对应分类
-
-                        const post = document.createElement("div");
-                        post.classList.add("post");
-                        post.dataset.mainTag = mainTag;
-                        post.dataset.subTags = subTags.join(",");
-                        post.innerHTML = `<h2>${issue.title}</h2><p>${issue.body.replace(/\n/g, "<br>")}</p>`;
-                        contentDiv.appendChild(post);
-                        postList.push(post);
-                    }
-                });
-
-                // **创建主分类导航**
-                mainCategories.forEach(cat => {
-                    const btn = document.createElement("button");
-                    btn.textContent = cat;
-                    btn.onclick = () => showSubCategories(cat, postList);
-                    mainNav.appendChild(btn);
+                    post.innerHTML = `<h2>${issue.title}</h2><p>${issue.body.replace(/\n/g, "<br>")}</p>`;
+                    contentDiv.appendChild(post);
                 });
 
             } catch (error) {
@@ -102,35 +119,47 @@
         }
         fetchIssues();
 
-        // **显示小分类**
-        function showSubCategories(mainTag, postList) {
-            const subNav = document.getElementById("subNav");
-            subNav.innerHTML = ""; // 清空子分类
-            subNav.style.display = "block"; // 显示子分类栏
-
-            const subTags = [...categoryMap[mainTag]];
-            if (subTags.length === 0) {
-                subNav.style.display = "none"; // 没有子分类则隐藏
-            } else {
-                subTags.forEach(sub => {
-                    const btn = document.createElement("button");
-                    btn.textContent = sub;
-                    btn.onclick = () => filterPosts(mainTag, sub, postList);
-                    subNav.appendChild(btn);
-                });
-            }
-
-            // **默认显示主分类下的所有文章**
-            filterPosts(mainTag, "", postList);
+        // **按分类筛选**
+        function filterPosts(category) {
+            document.querySelectorAll(".post").forEach(post => {
+                post.style.display = post.dataset.tags.includes(category) ? "block" : "none";
+            });
         }
 
-        // **筛选文章**
-        function filterPosts(mainTag, subTag, postList) {
-            postList.forEach(post => {
-                const matchesMain = post.dataset.mainTag === mainTag;
-                const matchesSub = subTag === "" || post.dataset.subTags.includes(subTag);
-                post.style.display = matchesMain && matchesSub ? "block" : "none";
-            });
+        // **图片上传 & 添加水印**
+        function addWatermark() {
+            const fileInput = document.getElementById("imageUpload");
+            const canvas = document.getElementById("canvas");
+            const ctx = canvas.getContext("2d");
+            const previewDiv = document.getElementById("imagePreview");
+
+            if (fileInput.files.length === 0) {
+                alert("请先选择一张图片");
+                return;
+            }
+
+            const file = fileInput.files[0];
+            const reader = new FileReader();
+            reader.onload = function(event) {
+                const img = new Image();
+                img.onload = function() {
+                    canvas.width = img.width;
+                    canvas.height = img.height;
+                    ctx.drawImage(img, 0, 0);
+
+                    // **添加水印**
+                    ctx.font = "30px Arial";
+                    ctx.fillStyle = "rgba(255, 255, 255, 0.7)";
+                    ctx.fillText("山雀大王", img.width - 200, img.height - 50);
+                    ctx.fillText("oloiyy@163.com", img.width - 300, img.height - 20);
+
+                    // **展示水印后的图片**
+                    const dataURL = canvas.toDataURL();
+                    previewDiv.innerHTML = `<img src="${dataURL}" style="max-width:100%;">`;
+                };
+                img.src = event.target.result;
+            };
+            reader.readAsDataURL(file);
         }
     </script>
 </body>
