--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 const reader = new FileReader();
                 reader.onload = function(e) {
                     const img = new Image();
-                    img.src = e.target.result;
+                    <img src="https://github.com/user-attachments/assets/20f98c2c-a3b1-4679-9b80-78a0deb10627" alt="图片描述" width="300">
                     img.onload = function() {
                         const canvas = document.getElementById("canvas");
                         const ctx = canvas.getContext("2d");
