--- a/index.html
+++ b/index.html
@@ -42,7 +42,53 @@
         document.getElementById("viewCount").textContent = localStorage.viewCount;
 
         // **获取 GitHub Issues**
-        async function fetchIssues() {
+        async function async function fetchIssues() {
+    const username = "joinliving";
+    const repo = "puppy";
+    const url = `https://api.github.com/repos/${username}/${repo}/issues?state=open`;
+
+    try {
+        const response = await fetch(url);
+        const issues = await response.json();
+        const contentDiv = document.getElementById("content");
+        contentDiv.innerHTML = "";
+
+        issues.forEach(issue => {
+            const post = document.createElement("div");
+            post.classList.add("post");
+
+            const title = document.createElement("h2");
+            title.textContent = issue.title;
+
+            const content = document.createElement("p");
+            content.classList.add("content");
+            let bodyHtml = issue.body.replace(/\n/g, "<br>"); // 处理换行
+            bodyHtml = bodyHtml.replace(/!\[.*?\]\((.*?)\)/g, '<img src="$1" style="max-width:100%; height:auto;">'); // 解析 Markdown 图片
+
+            content.innerHTML = bodyHtml;
+
+            const toggleButton = document.createElement("button");
+            toggleButton.textContent = "展开正文";
+            toggleButton.onclick = function () {
+                if (content.style.display === "none" || content.style.display === "") {
+                    content.style.display = "block";
+                    toggleButton.textContent = "收起正文";
+                } else {
+                    content.style.display = "none";
+                    toggleButton.textContent = "展开正文";
+                }
+            };
+
+            post.appendChild(title);
+            post.appendChild(toggleButton);
+            post.appendChild(content);
+            contentDiv.appendChild(post);
+        });
+
+    } catch (error) {
+        document.getElementById("content").textContent = "加载失败，请检查 GitHub 配置";
+    }
+} {
             const username = "joinliving";
             const repo = "puppy";
             const url = `https://api.github.com/repos/${username}/${repo}/issues?state=open`;
