--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         document.getElementById("viewCount").textContent = localStorage.viewCount;
 
         // **获取 GitHub Issues**
-        async function async function fetchIssues() {
+        async function fetchIssues() {
     const username = "joinliving";
     const repo = "puppy";
     const url = `https://api.github.com/repos/${username}/${repo}/issues?state=open`;
@@ -88,50 +88,7 @@
     } catch (error) {
         document.getElementById("content").textContent = "加载失败，请检查 GitHub 配置";
     }
-} {
-            const username = "joinliving";
-            const repo = "puppy";
-            const url = `https://api.github.com/repos/${username}/${repo}/issues?state=open`;
-
-            try {
-                const response = await fetch(url);
-                const issues = await response.json();
-                const contentDiv = document.getElementById("content");
-                contentDiv.innerHTML = "";
-
-                issues.forEach(issue => {
-                    const post = document.createElement("div");
-                    post.classList.add("post");
-
-                    const title = document.createElement("h2");
-                    title.textContent = issue.title;
-
-                    const content = document.createElement("p");
-                    content.classList.add("content");
-                    content.innerHTML = issue.body.replace(/\n/g, "<br>");
-
-                    const toggleButton = document.createElement("button");
-                    toggleButton.textContent = "展开正文";
-                    toggleButton.onclick = function () {
-                        if (content.style.display === "none" || content.style.display === "") {
-                            content.style.display = "block";
-                            toggleButton.textContent = "收起正文";
-                        } else {
-                            content.style.display = "none";
-                            toggleButton.textContent = "展开正文";
-                        }
-                    };
-
-                    post.appendChild(title);
-                    post.appendChild(toggleButton);
-                    post.appendChild(content);
-                    contentDiv.appendChild(post);
-                });
-
-            } catch (error) {
-                document.getElementById("content").textContent = "加载失败，请检查 GitHub 配置";
-            }
-        }
+}
         fetchIssues();
     </script>
 </body>
